--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -8,11 +8,11 @@ body {
   min-height: 100vh;
 }
 
-canvas {
+/* canvas {
  
   width: 100%;
   height: auto;
-}
+} */
 .sec-selections {
   flex-basis: 40%;
 }
@@ -58,16 +58,22 @@ canvas {
 
 #canvasFrGr, #canvasBkGr, #canvasText {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
+
 
 #canvasBkGr {
   z-index: 0;
+  max-width: 100%;
+    max-height: 550px;
 }
 
 #canvasFrGr {
   z-index: 1;
+  max-width: 100%;
+    max-height: 550px;
 }
 
 #canvasText {
