--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -55,7 +55,7 @@ body {
   margin-right: 1rem;
 }
 
-#canvasFrGr, #canvasBkGr, #canvasText {
+#canvasFrGr, #canvasBkGr, #canvasInnerFrame {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0%);
@@ -74,11 +74,12 @@ body {
     max-height: 550px;
 }
 
-#canvasText {
-  z-index: 2;
+
+#canvasInnerFrame {
+  z-index: 1;
+  max-width: 100%;
+    max-height: 550px;
 }
-
-
 
   .row {
     margin-left: 0px;
