--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -51,7 +51,7 @@
                 <button type="button" class="btn btn-dark" style="background : black">
                   <input id="fileUpload" type='file' onchange="readURL(this)" style="
                   width: 100%;
-              "/></button>
+              " /></button>
               </div>
 
             </div>
@@ -69,74 +69,76 @@
                   <br>
                   <select id="sizes" style="padding: 1%;">
                     <option value="">Standard Sizes</option>
-                    <option value='{"width": "40", "height": "37",  "vwidth":"10.2", "vheight":"15.2" }'>4" x 6" (10.2
+                    <option value='{"width":"10.2", "height":"15.2" }'>4" x 6" (10.2
                       x
                       15.2 cm)</option>
-                    <option value='{"width": "37", "height": "35", "vwidth":"12.7", "vheight":"17.8" }'>5" x 7" (12.7
+                    <option value='{"width":"12.7", "height":"17.8" }'>5" x 7" (12.7
                       x
                       17.8
                       cm)</option>
-                    <option value='{"width": "35", "height": "33",  "vwidth":"15.2", "vheight":"20.3" }'>6" x 8" (15.2
+                    <option value='{"width":"15.2", "height":"20.3" }'>6" x 8" (15.2
                       x
                       20.3 cm)</option>
-                    <option value='{"width": "33", "height": "31", "vwidth":"20.3", "vheight":"25.4" }'>8" x 10" (20.3
+                    <option value='{"width":"20.3", "height":"25.4"}'>8" x 10" (20.3
                       x
                       25.4 cm)</option>
-                    <option value='{"width": "31", "height": "29",  "vwidth":"20.3", "vheight":"30.5" }'>8" x 12"
+                    <option value='{"width":"20.3", "height":"30.5" }'>8" x 12"
                       (20.3
                       x
                       30.5 cm)
                     </option>
-                    <option value='{"width": "29", "height": "27",  "vwidth":"27.9", "vheight":"35.6" }'>11" x 14"
+                    <option value='{ "width":"27.9", "height":"35.6" }'>11" x 14"
                       (27.9
                       x
                       35.6 cm)
                     </option>
-                    <option value='{"width": "27", "height": "25",  "vwidth":"30.5", "vheight":"40.6" }'>12" x 16"
+                    <option value='{"width":"30.5", "height":"40.6" }'>12" x 16"
                       (30.5
                       x
                       40.6 cm)
                     </option>
-                    <option value='{"width": "25", "height": "23",  "vwidth":"40.6", "vheight":"50.8" }'>16" x 20"
+                    <option value='{"width":"40.6", "height":"50.8"}'>16" x 20"
                       (40.6
                       x
                       50.8 cm)
                     </option>
-                    <option value='{"width": "23", "height": "21",  "vwidth":"40.6", "vheight":"61.0" }'>16" x 24"
+                    <option value='{ "width":"40.6", "height":"61.0"   }'>16" x 24"
                       (40.6
                       x
                       61.0 cm)
                     </option>
-                    <option value='{"width": "21", "height": "19", "vwidth":"45.6", "vheight":"61.0" }'>18" x 24"
+                    <option value='{"width":"45.6", "height":"61.0" }'>18" x 24"
                       (45.6
                       x
                       61.0 cm)
                     </option>
                     <optgroup label="B">
-                      <option value='{"width": "18", "height": "18",  "vwidth":"70.7", "vheight":"100.0" }'>B1 (70.7 x
+                      <option value='{"width":"70.7", "height":"100.0"  }'>B1 (70.7
+                        x
                         100.0
                         cm)</option>
-                      <option value='{"width": "24", "height": "22",  "vwidth":"50.0", "vheight":"70.7" }'>B2 (50.0 x
+                      <option value='{"width":"50.0", "height":"70.7" }'>B2 (50.0 x
                         70.7
                         cm)</option>
                     </optgroup>
                     <optgroup label="A">
-                      <option value='{"width": "34", "height": "32",  "vwidth":"14.8", "vheight":"21.0" }'>A5 (14.8 x
+                      <option value='{"width":"14.8", "height":"21.0"  }'>A5 (14.8 x
                         21.0
                         cm)</option>
-                      <option value='{"width": "32", "height": "30",  "vwidth":"21.0", "vheight":"29.7" }'>A4 (21.0 x
+                      <option value='{"width":"21.0", "height":"29.7" }'>A4 (21.0 x
                         29.7
                         cm)</option>
-                      <option value='{"width": "30", "height": "28",  "vwidth":"29.7", "vheight":"42.0" }'>A3 (29.7 x
+                      <option value='{"width":"29.7", "height":"42.0" }'>A3 (29.7 x
                         42.0
                         cm)</option>
-                      <option value='{"width": "28", "height": "26",  "vwidth":"42.0", "vheight":"59.4" }'>A2 (42.0 x
+                      <option value='{"width":"42.0", "height":"59.4" }'>A2 (42.0 x
                         59.4
                         cm)</option>
-                      <option value='{"width": "26", "height": "24",  "vwidth":"59.4", "vheight":"84.1" }'>A1 (59.4 x
+                      <option value='{"width":"59.4", "height":"84.1"  }'>A1 (59.4 x
                         84.1
                         cm)</option>
-                      <option value='{"width": "22", "height": "18",  "vwidth":"84.1", "vheight":"118.9" }'>A0 (84.1 x
+                      <option value='{"width":"84.1", "height":"118.9" }'>A0 (84.1
+                        x
                         118.9
                         cm)</option>
                     </optgroup>
