--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -49,8 +49,8 @@
             <div class="row">
               <div class="col-md-6">
                 <form id="fileupf" action="/upload" method="post" enctype="multipart/form-data">
-                  <input id="fileUpload" type="file" id="fileup" onchange="readURL(this)" name="photo" accept="image/*">
-                  
+                  <input id="fileUpload" type="file" id="fileup" onchange="readURL(this)" name="photo" accept="image/*" value="image">
+                  <input type="submit" id="btSubmit" value="upload" >
                   <span id="status"></span>
                 </form>
                 
