--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
     background: #E5E5E5;
     font-family: 'Libre Baskerville', serif;
     font-size: 10px;
+    zoom: 1.2;
   }
 
 .page-cpf {
